Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -89,11 +89,7 @@ button {
 <h2>Evaluación de contenido</h2>
 
 <div class="grid">
-<strong></strong>
-<strong>Nada</strong>
-<strong>Leve</strong>
-<strong>Mod.</strong>
-<strong>Sev.</strong>
+<strong></strong><strong>Nada</strong><strong>Leve</strong><strong>Mod.</strong><strong>Sev.</strong>
 
 <script>
 const categorias = ["sexo","violencia","lenguaje","drogas","miedo"];
@@ -210,3 +206,4 @@ function importar(event) {
 
 </body>
 </html>
+
