--- a/index.html
+++ b/index.html
@@ -302,6 +302,19 @@ function borrarFicha(id) {
   localStorage.setItem("familycheck", JSON.stringify(filtradas));
   renderListado();
 }
+function calcularFCDesdeFicha(ficha) {
+  const pesos = { sexo:3, violencia:3, miedo:2, lenguaje:1, drogas:1 };
+  let impacto = 0;
+
+  Object.entries(ficha.categorias).forEach(([cat, val]) => {
+    impacto += Number(val) * pesos[cat];
+  });
+
+  const edad = impacto >= 8 ? 16 : impacto >= 3 ? 12 : 7;
+  const fc = Math.max(1, 10 - impacto);
+
+  return { edad, fc };
+}
 
 function renderListado() {
   const contenedor = document.getElementById("resultadoListado");
@@ -329,36 +342,52 @@ function renderListado() {
   if (peliculas.length) {
     html += "<h3>🎬 Películas</h3>";
     peliculas.forEach(f => {
+  const { edad, fc } = calcularFCDesdeFicha(f);
+
   html += `
-    <div style="padding:8px 0;border-bottom:1px solid #eee;">
-      <strong>${f.titulo}</strong><br>
-      ${f.extra1} · ${f.extra2}<br>
+    <div style="padding:8px 0;border-bottom:1px solid #eee;display:flex;justify-content:space-between;align-items:center;">
+      <div>
+        <strong>${f.titulo}</strong><br>
+        ${f.extra1} · ${f.extra2}<br>
+        <small>Edad: ${edad}+ · FC: ${fc}/10</small>
+      </div>
+
       <button
         onclick="borrarFicha('${f.id}')"
-        style="margin-top:6px;background:#c62828;">
-        🗑 Borrar
+        title="Borrar ficha"
+        style="background:none;color:#c62828;border:none;font-size:1.1rem;cursor:pointer;">
+        🗑
       </button>
     </div>
   `;
 });
+
 
   }
 
   if (libros.length) {
     html += "<h3>📚 Libros</h3>";
     libros.forEach(f => {
+  const { edad, fc } = calcularFCDesdeFicha(f);
+
   html += `
-    <div style="padding:8px 0;border-bottom:1px solid #eee;">
-      <strong>${f.titulo}</strong><br>
-      ${f.extra1} · ISBN ${f.extra2}<br>
+    <div style="padding:8px 0;border-bottom:1px solid #eee;display:flex;justify-content:space-between;align-items:center;">
+      <div>
+        <strong>${f.titulo}</strong><br>
+        ${f.extra1} · ISBN ${f.extra2}<br>
+        <small>Edad: ${edad}+ · FC: ${fc}/10</small>
+      </div>
+
       <button
         onclick="borrarFicha('${f.id}')"
-        style="margin-top:6px;background:#c62828;">
-        🗑 Borrar
+        title="Borrar ficha"
+        style="background:none;color:#c62828;border:none;font-size:1.1rem;cursor:pointer;">
+        🗑
       </button>
     </div>
   `;
 });
+
 
   }
 
@@ -373,6 +402,7 @@ function renderListado() {
 
 </body>
 </html>
+
 
 
 
